--- a/caff-frontend/package.json
+++ b/caff-frontend/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "json-server": "^0.16.3",
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
