--- a/caff-frontend/angular.json
+++ b/caff-frontend/angular.json
@@ -65,7 +65,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "distance-learning-frontend:build"
+            "browserTarget": "distance-learning-frontend:build",
+            "proxyConfig": "./proxy.conf.json"
           },
           "configurations": {
             "production": {
