--- a/caff-frontend/package.json
+++ b/caff-frontend/package.json
@@ -18,19 +18,24 @@
     "@angular/compiler": "~10.1.1",
     "@angular/core": "~10.1.1",
     "@angular/forms": "~10.1.1",
+    "@angular/localize": "~10.1.1",
     "@angular/material": "^10.2.4",
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@types/file-saver": "^2.0.1",
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.5.3",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "json-server": "^0.16.3",
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
