--- a/caff-backend/src/main/resources/application.properties
+++ b/caff-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/caff_backend?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=jelszo123
+spring.datasource.password=123
 
 spring.jpa.generate-ddl=true
 
